--- a/eObrazovanje/frontend/src/app/components/ispiti/izmena-ispita/izmena-ispita.component.html
+++ b/eObrazovanje/frontend/src/app/components/ispiti/izmena-ispita/izmena-ispita.component.html
@@ -74,4 +74,5 @@
       <button class="btn btn-primary" (click)="save()" [disabled]="!aktivniRok">Sačuvaj</button>
     </div>
   </div>
+<!--  <mat-progress-spinner *ngIf="isSubmitting" mode="indeterminate"></mat-progress-spinner>-->
 </div>
