Add spinner on frontend when running Ethereum transaction

--- a/eObrazovanje/frontend/src/app/app.component.html
+++ b/eObrazovanje/frontend/src/app/app.component.html
@@ -9,3 +9,6 @@
     </p>
   </div>
 </footer>
+<div class="spinner" *ngIf="isLoading | async">
+  <mat-spinner mode="indeterminate"></mat-spinner>
+</div>
