--- a/eObrazovanje/frontend/src/app/components/ispiti/izmena-ispita/izmena-ispita.component.html
+++ b/eObrazovanje/frontend/src/app/components/ispiti/izmena-ispita/izmena-ispita.component.html
@@ -1,78 +1,79 @@
 <h1 class="text-center mb-4">{{pageTitle}}</h1>
-<div class="container d-flex justify-content-center">
-  <div>
-    <div class="mb-3">
-      <label for="predaje">Predmet / Predavač</label>
-      <select *ngIf=!isAddingFromProfile class="form-select" id="predaje" [(ngModel)]="ispit.predaje" [compareWith]="compareWithId" (ngModelChange)="ucitvanjeStudenata()" [disabled]="!aktivniRok || ispit.id !== null && ispit.id !== undefined">
-        <option [ngValue]="null">Odaberi</option>
-        <option *ngFor="let predavac of predavaci" [ngValue]="predavac">
-          {{predavac.predmet?.naziv}} - {{predavac.nastavnik?.ime}} {{predavac.nastavnik?.prezime}} ({{predavac.zvanje?.naziv}})
-        </option>
-      </select>
-      <select *ngIf=isAddingFromProfile class="form-select" id="predaje" [(ngModel)]="ispit.predaje" [compareWith]="compareWithId" [disabled]="!aktivniRok || ispit.id !== null && ispit.id !== undefined">
-        <option [ngValue]="null">Odaberi</option>
-        <option *ngFor="let predavac of predavaci" [ngValue]="predavac">
-          {{predavac.predmet?.naziv}} - {{predavac.nastavnik?.ime}} {{predavac.nastavnik?.prezime}} ({{predavac.zvanje?.naziv}})
-        </option>
-      </select>
-    </div>
-
-    <div class="mb-3">
-    <label for="student">Student</label>
-      <select *ngIf=!isAddingFromProfile [disabled]="!ispit.predaje || !aktivniRok || ispit.id !== null && ispit.id !== undefined" class="form-select" id="student" [(ngModel)]="ispit.student" [compareWith]="compareWithId">
-        <option [ngValue]="null">Odaberi</option>
-        <option
-          *ngFor="let student of studenti" [ngValue]="student">{{student?.ime}} {{student?.prezime}} ({{student?.brojIndeksa}})</option>
-      </select>
-      <select *ngIf=isAddingFromProfile [disabled]="true" class="form-select" id="student" [(ngModel)]="ispit.student" [compareWith]="compareWithId">
-        <option [ngValue]="null">Odaberi</option>
-        <option
-          *ngFor="let student of studenti" [ngValue]="student">{{student?.ime}} {{student?.prezime}} ({{student?.brojIndeksa}})</option>
-      </select>
-    </div>
-
-    <div class="mb-3">
-      <label for="bodovi" class="form-label">Bodovi</label>
-      <input type="number" [min]="0" [max]="100" class="form-control" id="bodovi" [(ngModel)]="ispit.bodovi" [disabled]="!aktivniRok" (ngModelChange)="izracunajOcenuOnChange()">
-    </div>
-
-    <div class="mb-3">
-      <label for="ocena" class="form-label">Ocena</label>
-      <input disabled="true" type="number" [min]="0" [max]="100" class="form-control" id="ocena" [(ngModel)]="ispit.ocena">
-    </div>
-
-    <div class="mb-3">
-      <label for="datum" class="form-label">Datum</label>
-      <br>
-      <div class="input-group">
-        <input
-          id="datum"
-          class="form-control"
-          placeholder="yyyy-mm-dd"
-          name="datum"
-          [(ngModel)]="ispit.datum"
-          [minDate]="aktivniRok?.pocetak"
-          [maxDate]="aktivniRok?.kraj"
-          ngbDatepicker
-          #datum="ngbDatepicker"
-          [disabled]="!aktivniRok"
-        />
-        <button class="btn btn-outline-secondary bi bi-calendar3" (click)="datum.toggle()" type="button">
-          <i class="fas fa-calendar"></i>
-        </button>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-6">
+      <div class="mb-3">
+        <label for="predaje">Predmet / Predavač</label>
+        <select *ngIf=!isAddingFromProfile class="form-select" id="predaje" [(ngModel)]="ispit.predaje" [compareWith]="compareWithId" (ngModelChange)="ucitvanjeStudenata()" [disabled]="!aktivniRok || ispit.id !== null && ispit.id !== undefined">
+          <option [ngValue]="null">Odaberi</option>
+          <option *ngFor="let predavac of predavaci" [ngValue]="predavac">
+            {{predavac.predmet?.naziv}} - {{predavac.nastavnik?.ime}} {{predavac.nastavnik?.prezime}} ({{predavac.zvanje?.naziv}})
+          </option>
+        </select>
+        <select *ngIf=isAddingFromProfile class="form-select" id="predaje" [(ngModel)]="ispit.predaje" [compareWith]="compareWithId" [disabled]="!aktivniRok || ispit.id !== null && ispit.id !== undefined">
+          <option [ngValue]="null">Odaberi</option>
+          <option *ngFor="let predavac of predavaci" [ngValue]="predavac">
+            {{predavac.predmet?.naziv}} - {{predavac.nastavnik?.ime}} {{predavac.nastavnik?.prezime}} ({{predavac.zvanje?.naziv}})
+          </option>
+        </select>
       </div>
-    </div>
 
-    <div class="mb-3">
-      <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch"  id="konacno" [(ngModel)]="ispit.konacno" [disabled]="!aktivniRok">
-        <label class="form-check-label" for="konacno">{{ispit.konacno? 'Konacno' : 'Nije konacno'}}</label>
+      <div class="mb-3">
+        <label for="student">Student</label>
+        <select *ngIf=!isAddingFromProfile [disabled]="!ispit.predaje || !aktivniRok || ispit.id !== null && ispit.id !== undefined" class="form-select" id="student" [(ngModel)]="ispit.student" [compareWith]="compareWithId">
+          <option [ngValue]="null">Odaberi</option>
+          <option
+            *ngFor="let student of studenti" [ngValue]="student">{{student?.ime}} {{student?.prezime}} ({{student?.brojIndeksa}})</option>
+        </select>
+        <select *ngIf=isAddingFromProfile [disabled]="true" class="form-select" id="student" [(ngModel)]="ispit.student" [compareWith]="compareWithId">
+          <option [ngValue]="null">Odaberi</option>
+          <option
+            *ngFor="let student of studenti" [ngValue]="student">{{student?.ime}} {{student?.prezime}} ({{student?.brojIndeksa}})</option>
+        </select>
       </div>
-    </div>
 
-    <div>
-      <button class="btn btn-primary" (click)="save()" [disabled]="!aktivniRok">Sačuvaj</button>
+      <div class="mb-3">
+        <label for="bodovi" class="form-label">Bodovi</label>
+        <input type="number" [min]="0" [max]="100" class="form-control" id="bodovi" [(ngModel)]="ispit.bodovi" [disabled]="!aktivniRok" (ngModelChange)="izracunajOcenuOnChange()">
+      </div>
+
+      <div class="mb-3">
+        <label for="ocena" class="form-label">Ocena</label>
+        <input disabled="true" type="number" [min]="0" [max]="100" class="form-control" id="ocena" [(ngModel)]="ispit.ocena">
+      </div>
+
+      <div class="mb-3">
+        <label for="datum" class="form-label">Datum</label>
+        <br>
+        <div class="input-group">
+          <input
+            id="datum"
+            class="form-control"
+            placeholder="yyyy-mm-dd"
+            name="datum"
+            [(ngModel)]="ispit.datum"
+            [minDate]="aktivniRok?.pocetak"
+            [maxDate]="aktivniRok?.kraj"
+            ngbDatepicker
+            #datum="ngbDatepicker"
+            [disabled]="!aktivniRok"
+          />
+          <button class="btn btn-outline-secondary bi bi-calendar3" (click)="datum.toggle()" type="button">
+            <i class="fas fa-calendar"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <div class="form-check form-switch">
+          <input class="form-check-input" type="checkbox" role="switch"  id="konacno" [(ngModel)]="ispit.konacno" [disabled]="!aktivniRok">
+          <label class="form-check-label" for="konacno">{{ispit.konacno? 'Konacno' : 'Nije konacno'}}</label>
+        </div>
+      </div>
+
+      <div>
+        <button class="btn btn-primary" (click)="save()" [disabled]="!aktivniRok">Sačuvaj</button>
+      </div>
     </div>
   </div>
-<!--  <mat-progress-spinner *ngIf="isSubmitting" mode="indeterminate"></mat-progress-spinner>-->
 </div>
